# django-task-management

./: .coverage  .env.example  .gitignore  README.md  coverage.json  main.py  pyproject.toml
TaskManagement/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_usersession.py  0003_emailverificationtoken.py  0004_remove_usersession_user_and_more.py  0005_user_timezone.py  0006_usersession.py
frontend/task-frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
frontend/task-frontend/src/: App.tsx  vite-env.d.ts
frontend/task-frontend/src/contexts/: AuthContext.tsx
frontend/task-frontend/src/hooks/: useAnalytics.ts  useTasks.ts  useTemporalAccess.ts  useUsers.ts
frontend/task-frontend/src/services/: analyticsService.ts  api.ts  authService.ts  taskService.ts  userService.ts
notifications/: models.py  serializers.py  signals.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
tasks/: admin.py  cleanup_audit_logs.py  exceptions.py  filters.py  middlewares.py  models.py  permissions.py  rate_limits.py  serializers.py  signals.py  test_permissions.py  tests.py  throttles.py  urls.py  views.py
tasks/middlewares/: audit_logging.py  security.py  silent_refresh.py
tasks/migrations/: 0001_initial.py  0002_alter_task_parent_task_taskhistory.py  0003_task_priority_escalated.py  0004_apiauditlog.py  0005_blockedip_failedauthattempt.py
templates/admin/: reassign_tasks.html
(+23 files in other folders)
