[project]
name = "taskmanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-cors-headers>=4.9.0",
    "django-rest-framework>=0.1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3.2",
    "pytz>=2025.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
]
